syntax = "proto3";
package consumer;

service Consumer {
    rpc GetConsumers(ConsumerFilter) returns (stream ConsumerRequest) {}
    rpc CreateConsumer(ConsumerRequest) returns (ConsumerResponse) {}
}

message ConsumerRequest {
  int32 id = 1;  // Unique ID number for a Customer.
  string name = 2;
  string email = 3;
  string phone= 4;

message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5;
}

repeated Address addresses = 5;
}

message ConsumerResponse {
    int32 id = 1;
    bool success = 2;
}

message ConsumerFilter {
    string keyword = 1;
}
